--- a/font/iconfont.css
+++ b/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1481114703972'); /* IE9*/
-  src: url('iconfont.eot?t=1481114703972#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1481114703972') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1481114703972') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1481114703972#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481174583583'); /* IE9*/
+  src: url('iconfont.eot?t=1481174583583#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481174583583') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481174583583') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481174583583#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -20,7 +20,11 @@
 
 .icon-gouwuche:before { content: "\e655"; }
 
+.icon-qq:before { content: "\e648"; }
+
 .icon-shouji:before { content: "\e66b"; }
+
+.icon-iconfontweibowukuang:before { content: "\e661"; }
 
 .icon-xiangzuo:before { content: "\e7d6"; }
 
@@ -71,6 +75,8 @@
 .icon-yinxingqia:before { content: "\e671"; }
 
 .icon-xiangzuo3:before { content: "\e60c"; }
+
+.icon-zhifubao:before { content: "\e62d"; }
 
 .icon-right:before { content: "\e986"; }
 
