--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,55 @@ a {
     .top .tp-info span {
       color: #424242;
       padding: 0 6px; }
+  .top .user-info {
+    position: relative;
+    display: none;
+    float: right;
+    margin-right: 20px;
+    height: 40px;
+    width: 120px;
+    text-align: center;
+    font-size: 12px;
+    cursor: pointer; }
+    .top .user-info h3.user-name {
+      text-align: -10px;
+      position: relative;
+      z-index: 10;
+      width: 100%;
+      height: 100%;
+      background: #333; }
+      .top .user-info h3.user-name i.iconfont {
+        position: absolute;
+        display: block;
+        right: 15px;
+        top: 0;
+        transform: rotate(90deg); }
+    .top .user-info .info-list {
+      position: absolute;
+      z-index: 5;
+      top: 40px;
+      display: none;
+      left: 0;
+      box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+      width: 120px;
+      background: #fff; }
+      .top .user-info .info-list .info-list {
+        width: 100%; }
+        .top .user-info .info-list .info-list .info-item {
+          padding: 5px 0; }
+          .top .user-info .info-list .info-list .info-item a {
+            display: block;
+            height: 30px;
+            width: 100%;
+            line-height: 30px;
+            color: #424242; }
+            .top .user-info .info-list .info-list .info-item a:hover {
+              background: #e0e0e0;
+              color: #f60; }
+    .top .user-info:hover {
+      color: #f60; }
+      .top .user-info:hover h3.user-name {
+        background: #fff; }
 
 .head {
   position: relative;
