--- a/css/login.css
+++ b/css/login.css
@@ -45,7 +45,8 @@ body {
     margin: 0 auto 15px;
     width: 358px;
     height: 48px;
-    border: 1px solid #e0e0e0; }
+    border: 1px solid #e0e0e0;
+    position: relative; }
     #login .wrap input {
       width: 326px;
       height: 22px;
@@ -55,8 +56,19 @@ body {
       outline: none;
       background: none; }
     #login .wrap input.btn {
+      position: relative;
+      z-index: 1;
       height: 48px;
       width: 358px; }
+    #login .wrap .erro {
+      position: absolute;
+      display: block;
+      color: #F13F40;
+      right: -100px;
+      padding-left: 20px;
+      width: 80px;
+      line-height: 48px;
+      top: 0; }
   #login .wrap.wrap-btn {
     position: relative;
     margin-top: 40px;
