--- a/sass/index.scss
+++ b/sass/index.scss
@@ -88,6 +88,68 @@ $width:1226px;
             padding: 0 6px;
         }
     }
+    .user-info{
+        position: relative;
+        display: none;
+        float: right;
+        margin-right: 20px;
+        height: 40px;
+        width: 120px;
+        text-align: center;
+        font-size: 12px;
+        cursor: pointer;
+       
+        h3.user-name{
+            text-align: -10px;
+            position: relative;
+            z-index: 10;
+            width: 100%;
+            height: 100%;
+            background: $bg;
+            i.iconfont{
+                position: absolute;
+                display: block;
+                right: 15px;
+                top: 0;
+                transform: rotate(90deg);
+               
+            }
+        }
+        .info-list{
+            position: absolute;
+            z-index: 5;
+            top: 40px;
+            display: none;
+            left: 0;
+            box-shadow: 0 5px 5px rgba(0,0,0,0.15);
+            width: 120px;
+            background: #fff;
+            .info-list{
+                width: 100%;
+                .info-item{
+                    padding: 5px 0;
+                    a{
+                        display: block;
+                        height: 30px;
+                        width: 100%;
+                        line-height: 30px;
+                        color: #424242;
+                        &:hover{
+                            background: #e0e0e0;
+                            color: #f60;
+                        }
+                    }
+                }
+            }
+            
+        }
+        &:hover{
+            color: #f60;
+            h3.user-name{
+                background: #fff;
+            }
+        }
+    }
 }
 
 .head{
